Correction contraste

--- a/style.css
+++ b/style.css
@@ -659,7 +659,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000ef!important;
 }
 
 .container {
